# tira-ai-platform

./: .gitignore  Dockerfile  LICENSE  README.md  buildrun.sh  docker-compose.yml  dockerfile  main.dockerfile  run_e2e_tests.sh  tira-ai-platform.code-workspace
HPC/: Dockerfile  pyproject.toml
backend/: .coveragerc  .env  .env.development  .env.production  .env.test  .pylintrc  Dockerfile  dev.cert  dev.key  dockerfile  game_state.py  poetry.toml  pyproject.toml  tasks.py  uwgi.test.ini  wsgi.dev.ini  wsgi.ini
backend/requests/: send_empty_code_file.rest  submit_nonempty_code.rest
backend/src/: ai.py  ai_random.py  app.py  chess.py  config.py  connect_four_engine.py  engine_wrapper.py  game_state.py  image.py  main.py  path.py  run_image.py  stockfish_ai.py  stockfish_engine.py  test_ai.py  test_ai_random.py
backend/src/entities/: chess_judge.py  chess_judger.py  cloned_repository.py  game.py  game_factory.py  image.py  judge.py  move.py  player.py  player_connectfour.py  player_logger.py  player_stockfish.py  ssh_connection.py
backend/src/entities/connectfour/: connect_four_engine.py  connect_four_heuristic-py  connect_four_heuristic.py  connect_four_judge.py
backend/src/entities/judges/: connect_four_judge.py
backend/src/entities/players/: chess_player.py  player.py  player_connectfour.py  player_stockfish.py  repository_player.py
backend/src/services/: api.py  batch_builder.py  batch_script_builder.py  game.py  game_factory.py  hpc_service.py  player_factory.py  socket_io_service.py  socket_service.py
backend/src/services/games/: chess.py  chess_game.py  connect_four.py  connectfour.py  game.py
backend/src/tests/: test_chess.py  test_chess_judger.py  test_connect_four_engine.py  test_engine_wrapper.py  test_game_factory.py
backend/src/tests/data/: sample_chess_moves.txt  sample_connect_four_moves.txt
backend/src/tests/entities/: test_chess_judge.py  test_connect_four_heuristic.py  test_connect_four_judge.py  test_player.py  test_player_logger  test_player_logger.py  test_player_stockfish.py  test_repository_player.py  test_ssh_connection.py
backend/src/tests/entities/connectfour/: test_connect_four_engine.py
backend/src/tests/entities/players/: test_chess_player.py  test_player_logger.py  test_player_stockfish.py
backend/src/tests/services/: test_api.py  test_game.py  test_game_factory.py  test_hpc_service.py
backend/src/tests/services/games/: test_connect_four.py  test_connect_four_engine.py
backend/src/tests/utils/: read_moves.py
backend/src/utils/: engine_wrapper.py  logger.py
docs/: admin_manual.md  api.md  architecture.md  conventions.md  definitionofdone  definitionofdone.md  environment.md  installation.md  testing.md  usermanual.md
frontend/: .env.staging  .eslintrc.cjs  README.md  cypress.config.ts  dockerfile  index.html  (+6 more)
game-image/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  tasks.py
game-image/src/: config.py  connect_four_engine.py  main.py  run_image.py
game-image/src/entities/: chess_judge.py  cloned_repository.py  judge.py  player.py  stockfish_engine.py
game-image/src/entities/connectfour/: connect_four_judge.py
game-image/src/entities/players/: chess_player.py
game-image/src/services/: game.py  game_factory.py  player_factory.py
game-image/src/tests/entities/: test_chess_judge.py
game-image/src/tests/entities/players/: test_chess_player.py  test_repository_player.py
game-image/src/tests/mockrepos/mockrepo2/: file.py
game-image/src/tests/mockrepos/mockrepo3/: file.py
game-image/src/tests/services/: test_game_factory.py
game-image/src/utils/: install_stockfish.py
samples/chess/: pyproject.toml  stupid_ai.py
samples/chess/src/: smart_ai.py
samples/chess/tiraconfig/: runcommand  setup.sh
(+134 files in other folders)
