[tool.poetry]
name = "game-ai-testing-platform-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
stockfish = "^3.28.0"
invoke = "^2.2.0"
python-dotenv = "^1.0.0"
python-chess = "^1.999"
flask-socketio = "^5.3.6"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
coverage = "^7.4.0"
pylint = "^3.0.3"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
