[tool.poetry]
name = "game-ai-testing-platform-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
invoke = "^2.2.0"
python-dotenv = "^1.0.0"
flask-socketio = "^5.3.6"
authlib = "^1.3.0"
requests = "^2.31.0"
gevent = "^24.2.1"
pyuwsgi = "^2.0.23.post0"
paramiko = "^3.4.0"
duo-game-lib = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pylint = "^3.0.3"
pytest = "^8.2.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
