[tool.poetry]
name = "game-ai-testing-platform-game-image"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
stockfish = "^3.28.0"
python-dotenv = "^1.0.0"
python-chess = "^1.999"
gitpython = "^3.1.42"
connect-four-lib = "^1.3.0"
duo-game-lib = "^0.1.0"
invoke = "^2.2.0"
urllib3 = "^2.2.1"
filelock = "^3.13.4"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pylint = "^3.0.3"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
