[tool.poetry]
name = "chess-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
chess = "^1.10.0"
stockfish = "^3.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
